# open-msupply-plugins

./: .gitignore  README.md  bundle.json
backend/latest/: codegenTypes.ts  package.json  tsconfig.json  webpack.config.js
backend/latest/src/: aggregatedAmc.ts  aggregatedAmcInfo.ts  createPrescription.graphql  itemMovementsInPeriod.ts  items.graphql  normalAmcWithDOSadjustment.ts  plugin.d.ts  plugin.ts  sqlQueries.ts  sqlUtils.ts  types.ts  utils.ts
backend/latest/src/generated-types/: graphql.ts
backend/latest/test/graphql/: Cargo.toml
backend/latest/test/graphql/src/: gql.rs  main.rs  queries.graphql
examples/Dashboard/: package.json  plugin.json  webpack.config.js
examples/Dashboard/src/: Replenishment.tsx  ReplenishmentWidget.tsx  SyncStatus.tsx  SyncStatusWidget.tsx
examples/ShippingStatus/: package.json  plugin.json  webpack.config.js
examples/ShippingStatus/src/: ShippingStatus.tsx
examples/StockDonor/: package.json  plugin.json  webpack.config.js
examples/StockDonor/src/: StockDonorColumn.tsx  StockDonorEdit.tsx  StockDonorEditInput.tsx
examples/StockDonor/src/api/: api.ts  operations.generated.ts  operations.graphql
frontend/latest/: package.json  tsconfig.json  webpack.config.js
frontend/latest/src/: plugin.tsx
frontend/latest/src/AggregateAmc/: AggregateAmcColumn.tsx  AggregateAmcInfo.tsx
frontend/latest/src/AggregateAmcInfo/: AggregateAmcInfo.tsx
frontend/latest/src/Configuration/: ConfigComponent.tsx  index.ts  operations.generated.ts  operations.graphql  types.ts  usePluginConfiguration.ts
shared/: constants.ts  types.ts
(+41 files in other folders)
