[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
assert-json-diff = "2.0.2"
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tabled = "0.18.0"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["macros", "rt", "rt-multi-thread"] }
